argocd/immich/manifests/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  labels:
    app: immich-server
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: immich-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      runtimeClassName: nvidia
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - marcus-server
      containers:
        - name: immich-server
          image: harbor.yanello.net/ghcr/immich-app/immich-server:v3.2.4@sha256:d317916b28090c33eb36b308464ea391f8b7df1d850fcfea227a39ec879718c2
          ports:
            - containerPort: 2283
              protocol: TCP
            - containerPort: 3000
              protocol: TCP
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              nvidia.com/gpu: "1"
              memory: 500Mi
              cpu: 100m
            limits:
              nvidia.com/gpu: "1"
              memory: 4Gi
          volumeMounts:
            - name: photos
              mountPath: /usr/src/app/upload
            - name: photo-frame
              mountPath: /usr/src/app/photo-frame
      volumes:
        - name: photo-frame
          persistentVolumeClaim:
            claimName: photo-frame
        - name: photos
          persistentVolumeClaim:
            claimName: photos
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  labels:
    app: immich-machine-learning
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: immich-machine-learning
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      runtimeClassName: nvidia
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - marcus-server
      containers:
        - name: immich-machine-learning
          image: harbor.yanello.net/ghcr/immich-app/immich-machine-learning:v3.2.4-cuda@sha256:b9fdebfe7f07ff71f77e9d67d509d83c5e055da486a07c12080669c82a80c65e
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: photos
              mountPath: /usr/src/app/upload
            - name: model-cache
              mountPath: /cache
          resources:
            requests:
              nvidia.com/gpu: "1"
              memory: "2Gi"
              cpu: 50m
            limits:
              nvidia.com/gpu: "1"
              memory: "4Gi"
      volumes:
        - name: photos
          persistentVolumeClaim:
            claimName: photos
        - name: model-cache
          persistentVolumeClaim:
            claimName: model-cache
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: redis
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - image: harbor.yanello.net/docker/valkey/valkey:9.1.2-alpine@sha256:48332870af354a799964c0012ae1194a0bf2bf894eb508f945810596dc2d8d11
          imagePullPolicy: IfNotPresent
          name: redis
          ports:
            - containerPort: 6379
              protocol: TCP
          resources:
            requests:
              memory: 10Mi
              cpu: 30m
            limits:
              memory: 50Mi
