argocd/immich/manifests/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Immich
    gethomepage.dev/icon: immich
    gethomepage.dev/description: "High performance self-hosted photo and video management\
      \ solution."
    gethomepage.dev/pod-selector: app=immich-server
  labels:
    app.kubernetes.io/instance: immich-app
  name: immich-httproute
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
    - name: cilium-public-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - immich.yanello.net
  rules:
    - backendRefs:
        - name: immich-server
          namespace: immich
          port: 2283
