argocd/immich/manifests/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-server
spec:
  endpointSelector:
    matchLabels:
      app: immich-server
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "2283"
              protocol: TCP
            - port: "3000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: immich
            app: postgres
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: immich
            app: redis
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: immich
            app: immich-machine-learning
      toPorts:
        - ports:
            - port: "3003"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: authentik
            k8s:app.kubernetes.io/name: authentik
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-machine-learning
spec:
  endpointSelector:
    matchLabels:
      app: immich-machine-learning
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: immich
            app: immich-server
      toPorts:
        - ports:
            - port: "3003"
              protocol: TCP
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-data
spec:
  endpointSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - postgres
          - redis
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: immich
            app: immich-server
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "6379"
              protocol: TCP
  egressDeny:
    - toEntities:
        - world
